--- a/_posts/2020-02-05-lanenet.md
+++ b/_posts/2020-02-05-lanenet.md
@@ -29,7 +29,7 @@ Because of this, we used [Berkeley DeepDrive's scalabel tool](https://scalabel.a
 to set up our own labeling server. Here's a screenshot of it in action below.
 
 <p align = 'center'>
-<img src = '/assets/img/tool.gif' width = '720px'>
+<img src = '/assets/img/tool.png' width = '720px'>
 </p>
 
 <p align = 'center'><i>
