--- a/_posts/2020-03-05-tracker.md
+++ b/_posts/2020-03-05-tracker.md
@@ -46,7 +46,7 @@ all the way through.
 Polyline fitting with stabilization of Lanenet detections for the right
 lane line. The circles represent "waypoints" that are tracked between
 frames to stabilize the final polyline. The blue regions show pixels that
-are above the threshold but 
+are above the threshold but were rejected.
 </i></p>
 
 We realized that polylines were not very good at extrapolating past observed
