--- a/_posts/2020-03-09-road-test.md
+++ b/_posts/2020-03-09-road-test.md
@@ -5,7 +5,7 @@ date:   2020-03-09 10:20:02
 author:  Caravel Team
 ---
 
-Today we manage to do a road test running the entire stack end to end. On the
+Today we managed to do a road test running the entire stack end to end. On the
 bright side the perception stack is tracking the path of the car very well and
 the planner plan looks very reasonable. Unfortunately, it seems that the
 planner is over-actuating. Going slowly, we are able to follow a road but the
